# Bombermaaan-R

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
RES/: RES.CPP  RES.vcproj  ReadMe.txt  resource.h
RES/IMAGE/: arena_arrows.xcf
RES32/: resource.rc
RESGEN/: Makefile.old  ResGen.cpp  ResGen.h
assets/levels/: L8.TXT
assets/linux/: Bombermaaan.desktop
assets/windows/installer/: Bombermaaan_1.3.0.423_setup_Vista_notes.txt  InstallScript.iss  InstallScript.nsi
debian-data/DEBIAN/: postrm
debian/DEBIAN/: control.dist  md5sums
docs/: Compile instructions.dox  Doxyfile  Level_File_Layout_Version2.html  RELEASE_NOTES_r649.txt  RELEASE_NOTES_r655.txt  Readme.html  _generate.cmd  _main.txt  control.txt  how-to-compile.txt
doxygen/: Doxyfile  Doxyfile.txt  HTML footer.txt  HTML header.txt  _generate.cmd  footer.html  header.html
images/: Convert_all_svg2png.cmd  Convert_svg2png.cmd
images/blocksize_32/: Convert_svg2png2bmp.cmd
images/blocksize_32/bombers/: arena_bomber_death_sprite0.xcf  arena_bomber_death_sprite1.xcf  arena_bomber_death_sprite2.xcf
images/blocksize_32/patterns/: analyze-32.php  transform_png-color-32.php  transform_stunt-32.php
images/gimp-scripts/: bm-color-bombers.scm
installer/: Bombermaaan_1.3.0.423_setup_Vista_notes.txt  HeaderImage.xcf  HeaderImage_Innosetup.xcf  InstallScript.iss  InstallScript.nsi
src/: Bombermaaan.dsw  Bombermaaan.rc  Bombermaaan.sln  CAiArena.cpp  CAiArena.h  CAiBomber.h  CAiManager.h  CArena.h  CArenaCloser.h  CArenaSnapshot.h  CBoard.cpp  CBoard.h  CBomb.cpp  CBomb.h  CBomber.cpp  CBomber.h  CBomberMove.cpp  CBomberMove.h  CClock.h  CCloudManager.h  CCommandChunk.h  CConsole.h  CControls.cpp  CControls.h  CDebug.h  CDemo.h  CDirectDraw.h  CDirectInput.h  CDisplay.cpp  CDisplay.h  CDrawGame.cpp  CDrawGame.h  CElement.h  CExplosion.h  CFloor.h  CFont.h  CGame.cpp  CGame.h  CHANGELOG.txt  CHurryMessage.h  (+50 more)
src/.anjuta/: default.profile
src/Bombermaaan/: Bombermaaan.dev  Bombermaaan.dsp  Bombermaaan.rc  Bombermaaan.sh  Bombermaaan.vcproj  BombermaaanIco.h  Bombermaaan_mingw32.rc  CAiArena.cpp  CAiArena.h  CAiBomber.cpp  CAiBomber.h  CAiManager.cpp  CAiManager.h  CArena.cpp  CArena.h  CArenaCloser.cpp  CArenaCloser.h  CArenaSnapshot.cpp  CArenaSnapshot.h  CBoard.cpp  CBoard.h  CBomb.cpp  CBomb.h  CBomber.cpp  CBomber.h  CBomberMove.cpp  CBomberMove.h  CClock.cpp  CClock.h  CCloudManager.cpp  CCloudManager.h  CCommandChunk.cpp  CCommandChunk.h  CConsole.cpp  CConsole.h  CControls.cpp  CControls.h  CDebug.cpp  CDebug.h  CDemo.cpp  (+91 more)
src/RES/: Makefile.win  RES.CPP  RES.dsp  RES.vcproj  ReadMe.txt  StdAfx.cpp  resource.h  resource.rc
src/RES32/: Makefile.win  RES.CPP  RES.vcproj  RES32.dsp  RES32.vcproj  StdAfx.h  resource.h  resource.rc
src/RESGEN/: Makefile  ResGen.cpp  ResGen.h
tools/: create_experimental-release.bash  create_release.sh
web/: changelog.php  contact.php  css.php  development.php  download.php  faq.php  features.php  feedback.php  history.php  index.php  license.php  screenshots.php  standard.css  todo.php
web-levels/: css.css  levels.php  upload.cgi
web-levels/LEVELPREVIEW/: COptions.cpp  COptions.h  LevelPreview.cpp  LevelPreview.dsp  LevelPreview.dsw  LevelPreview.h  Makefile
web/inc/: webpage.php
(+34 files in other folders)
